--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -366,16 +366,16 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6105cc11b50940a9a23c413993e7d1e8-8334481d1f60488fa5c31bce37e9dba8" name="6105cc11b50940a9a23c413993e7d1e8" class="tab" checked><label for="6105cc11b50940a9a23c413993e7d1e8-8334481d1f60488fa5c31bce37e9dba8" >General</label>
-<input type="radio" id="6105cc11b50940a9a23c413993e7d1e8-760750313d704db69f711c8b2b194b6e" name="6105cc11b50940a9a23c413993e7d1e8" class="tab" ><label for="6105cc11b50940a9a23c413993e7d1e8-760750313d704db69f711c8b2b194b6e" >Startup</label>
-<input type="radio" id="6105cc11b50940a9a23c413993e7d1e8-c7dcb40a5a5e4beab771b28014327f17" name="6105cc11b50940a9a23c413993e7d1e8" class="tab" ><label for="6105cc11b50940a9a23c413993e7d1e8-c7dcb40a5a5e4beab771b28014327f17" >Android</label>
-<input type="radio" id="6105cc11b50940a9a23c413993e7d1e8-ad7286c4e62a4fea8888cb1a1c630961" name="6105cc11b50940a9a23c413993e7d1e8" class="tab" ><label for="6105cc11b50940a9a23c413993e7d1e8-ad7286c4e62a4fea8888cb1a1c630961" >iOS</label>
+<input type="radio" id="31bad655fed94cd6adeb3537d1c7cae8-2f5ed8d61773410ba464e82f4138c9d5" name="31bad655fed94cd6adeb3537d1c7cae8" class="tab" checked><label for="31bad655fed94cd6adeb3537d1c7cae8-2f5ed8d61773410ba464e82f4138c9d5" >General</label>
+<input type="radio" id="31bad655fed94cd6adeb3537d1c7cae8-1970954cdb254cc39e175e5fbba144c8" name="31bad655fed94cd6adeb3537d1c7cae8" class="tab" ><label for="31bad655fed94cd6adeb3537d1c7cae8-1970954cdb254cc39e175e5fbba144c8" >Startup</label>
+<input type="radio" id="31bad655fed94cd6adeb3537d1c7cae8-a9610031979a44808cb7d31ec9b4141d" name="31bad655fed94cd6adeb3537d1c7cae8" class="tab" ><label for="31bad655fed94cd6adeb3537d1c7cae8-a9610031979a44808cb7d31ec9b4141d" >Android</label>
+<input type="radio" id="31bad655fed94cd6adeb3537d1c7cae8-b4b9a5a229b74f3286ba66528d9af625" name="31bad655fed94cd6adeb3537d1c7cae8" class="tab" ><label for="31bad655fed94cd6adeb3537d1c7cae8-b4b9a5a229b74f3286ba66528d9af625" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
