--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e21b9b455b9e4b1ea464e1dfdd74c916-e8fb61141fca43eb8b8da3511d5983e3" name="e21b9b455b9e4b1ea464e1dfdd74c916" class="tab" checked><label for="e21b9b455b9e4b1ea464e1dfdd74c916-e8fb61141fca43eb8b8da3511d5983e3" >General</label>
-<input type="radio" id="e21b9b455b9e4b1ea464e1dfdd74c916-672666022b06487b85fa6cacdc9f767d" name="e21b9b455b9e4b1ea464e1dfdd74c916" class="tab" ><label for="e21b9b455b9e4b1ea464e1dfdd74c916-672666022b06487b85fa6cacdc9f767d" >Startup</label>
-<input type="radio" id="e21b9b455b9e4b1ea464e1dfdd74c916-477e040c46904b7c8f8e5e96d7496be0" name="e21b9b455b9e4b1ea464e1dfdd74c916" class="tab" ><label for="e21b9b455b9e4b1ea464e1dfdd74c916-477e040c46904b7c8f8e5e96d7496be0" >Android</label>
-<input type="radio" id="e21b9b455b9e4b1ea464e1dfdd74c916-045613de0ca34271b45b7461f8114b7a" name="e21b9b455b9e4b1ea464e1dfdd74c916" class="tab" ><label for="e21b9b455b9e4b1ea464e1dfdd74c916-045613de0ca34271b45b7461f8114b7a" >iOS</label>
-<input type="radio" id="e21b9b455b9e4b1ea464e1dfdd74c916-35818872d280412f98935b88f22323ad" name="e21b9b455b9e4b1ea464e1dfdd74c916" class="tab" ><label for="e21b9b455b9e4b1ea464e1dfdd74c916-35818872d280412f98935b88f22323ad" >Windows</label>
+<input type="radio" id="37f3c4ab20584d2e8a1578b59a8e210d-101595366b454f02b018a6d6e4d07b1c" name="37f3c4ab20584d2e8a1578b59a8e210d" class="tab" checked><label for="37f3c4ab20584d2e8a1578b59a8e210d-101595366b454f02b018a6d6e4d07b1c" >General</label>
+<input type="radio" id="37f3c4ab20584d2e8a1578b59a8e210d-b21a97ad85c045cb87f9aa387357ecc4" name="37f3c4ab20584d2e8a1578b59a8e210d" class="tab" ><label for="37f3c4ab20584d2e8a1578b59a8e210d-b21a97ad85c045cb87f9aa387357ecc4" >Startup</label>
+<input type="radio" id="37f3c4ab20584d2e8a1578b59a8e210d-a5e8767054ee4b5bb0c2b8aff4b8a4c5" name="37f3c4ab20584d2e8a1578b59a8e210d" class="tab" ><label for="37f3c4ab20584d2e8a1578b59a8e210d-a5e8767054ee4b5bb0c2b8aff4b8a4c5" >Android</label>
+<input type="radio" id="37f3c4ab20584d2e8a1578b59a8e210d-192712c8a50949928659c84a90e5897e" name="37f3c4ab20584d2e8a1578b59a8e210d" class="tab" ><label for="37f3c4ab20584d2e8a1578b59a8e210d-192712c8a50949928659c84a90e5897e" >iOS</label>
+<input type="radio" id="37f3c4ab20584d2e8a1578b59a8e210d-28cdb7a715d143a6bd6b8a978f180e85" name="37f3c4ab20584d2e8a1578b59a8e210d" class="tab" ><label for="37f3c4ab20584d2e8a1578b59a8e210d-28cdb7a715d143a6bd6b8a978f180e85" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
