--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -364,17 +364,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="81a8f53b29c745518c2f0c0359fe4864-34cacc24447a40bca2442439300dac22" name="81a8f53b29c745518c2f0c0359fe4864" class="tab" checked=""><label for="81a8f53b29c745518c2f0c0359fe4864-34cacc24447a40bca2442439300dac22">General</label>
-<input type="radio" id="81a8f53b29c745518c2f0c0359fe4864-700779f0400841c192828d26672d00ba" name="81a8f53b29c745518c2f0c0359fe4864" class="tab"><label for="81a8f53b29c745518c2f0c0359fe4864-700779f0400841c192828d26672d00ba">Startup</label>
-<input type="radio" id="81a8f53b29c745518c2f0c0359fe4864-83b48469d9b84b7a821be8760414602a" name="81a8f53b29c745518c2f0c0359fe4864" class="tab"><label for="81a8f53b29c745518c2f0c0359fe4864-83b48469d9b84b7a821be8760414602a">Android</label>
-<input type="radio" id="81a8f53b29c745518c2f0c0359fe4864-0d497a2429e747caa5c6f8d6dd5b6ec9" name="81a8f53b29c745518c2f0c0359fe4864" class="tab"><label for="81a8f53b29c745518c2f0c0359fe4864-0d497a2429e747caa5c6f8d6dd5b6ec9">iOS</label>
-<input type="radio" id="81a8f53b29c745518c2f0c0359fe4864-b40e54a1bcca498082442c30dac126ac" name="81a8f53b29c745518c2f0c0359fe4864" class="tab"><label for="81a8f53b29c745518c2f0c0359fe4864-b40e54a1bcca498082442c30dac126ac">Windows</label>
+<input type="radio" id="7be2a72424a04fa5a45284855d43d773-da48f94d02bf470a9f5a26f5fc1eb496" name="7be2a72424a04fa5a45284855d43d773" class="tab" checked=""><label for="7be2a72424a04fa5a45284855d43d773-da48f94d02bf470a9f5a26f5fc1eb496">General</label>
+<input type="radio" id="7be2a72424a04fa5a45284855d43d773-62f475d0e1e640ee944a02ed70269fff" name="7be2a72424a04fa5a45284855d43d773" class="tab"><label for="7be2a72424a04fa5a45284855d43d773-62f475d0e1e640ee944a02ed70269fff">Startup</label>
+<input type="radio" id="7be2a72424a04fa5a45284855d43d773-0a44d846d4c044269bce857dcb956a63" name="7be2a72424a04fa5a45284855d43d773" class="tab"><label for="7be2a72424a04fa5a45284855d43d773-0a44d846d4c044269bce857dcb956a63">Android</label>
+<input type="radio" id="7be2a72424a04fa5a45284855d43d773-ce915dfd87304ed5afbeb383f4da0b90" name="7be2a72424a04fa5a45284855d43d773" class="tab"><label for="7be2a72424a04fa5a45284855d43d773-ce915dfd87304ed5afbeb383f4da0b90">iOS</label>
+<input type="radio" id="7be2a72424a04fa5a45284855d43d773-11d3e28f3cbe48c4b4623ac89b5b307a" name="7be2a72424a04fa5a45284855d43d773" class="tab"><label for="7be2a72424a04fa5a45284855d43d773-11d3e28f3cbe48c4b4623ac89b5b307a">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -456,11 +456,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="7b5ca8ef4b5e4306a34624fddc2338b7-708ac71038c546a09ea8af810ce3ceb6" name="7b5ca8ef4b5e4306a34624fddc2338b7" class="tab" checked=""><label for="7b5ca8ef4b5e4306a34624fddc2338b7-708ac71038c546a09ea8af810ce3ceb6">General</label>
-<input type="radio" id="7b5ca8ef4b5e4306a34624fddc2338b7-a0678d6aac5145f990f0f43cf4ac4334" name="7b5ca8ef4b5e4306a34624fddc2338b7" class="tab"><label for="7b5ca8ef4b5e4306a34624fddc2338b7-a0678d6aac5145f990f0f43cf4ac4334">Startup</label>
-<input type="radio" id="7b5ca8ef4b5e4306a34624fddc2338b7-bb67d5f7cdf04a1aba8b5b874b4d782e" name="7b5ca8ef4b5e4306a34624fddc2338b7" class="tab"><label for="7b5ca8ef4b5e4306a34624fddc2338b7-bb67d5f7cdf04a1aba8b5b874b4d782e">Android</label>
-<input type="radio" id="7b5ca8ef4b5e4306a34624fddc2338b7-7ab3e66eb4424cc5a54c84719e72832f" name="7b5ca8ef4b5e4306a34624fddc2338b7" class="tab"><label for="7b5ca8ef4b5e4306a34624fddc2338b7-7ab3e66eb4424cc5a54c84719e72832f">iOS</label>
-<input type="radio" id="7b5ca8ef4b5e4306a34624fddc2338b7-93df00f087104bb7bae70affe262f0c6" name="7b5ca8ef4b5e4306a34624fddc2338b7" class="tab"><label for="7b5ca8ef4b5e4306a34624fddc2338b7-93df00f087104bb7bae70affe262f0c6">Windows</label>
+<input type="radio" id="64853ad248d641cfad0ad27e8cfa73e3-1b9e9792ff6f4e79b0e965cc584483ad" name="64853ad248d641cfad0ad27e8cfa73e3" class="tab" checked=""><label for="64853ad248d641cfad0ad27e8cfa73e3-1b9e9792ff6f4e79b0e965cc584483ad">General</label>
+<input type="radio" id="64853ad248d641cfad0ad27e8cfa73e3-04b68640efdd4fa8a38b34bcc364cdf3" name="64853ad248d641cfad0ad27e8cfa73e3" class="tab"><label for="64853ad248d641cfad0ad27e8cfa73e3-04b68640efdd4fa8a38b34bcc364cdf3">Startup</label>
+<input type="radio" id="64853ad248d641cfad0ad27e8cfa73e3-9feb62d4a878474d93bffddb3c74b4b4" name="64853ad248d641cfad0ad27e8cfa73e3" class="tab"><label for="64853ad248d641cfad0ad27e8cfa73e3-9feb62d4a878474d93bffddb3c74b4b4">Android</label>
+<input type="radio" id="64853ad248d641cfad0ad27e8cfa73e3-b2e9b72ad6ff4fd7969851028f713e29" name="64853ad248d641cfad0ad27e8cfa73e3" class="tab"><label for="64853ad248d641cfad0ad27e8cfa73e3-b2e9b72ad6ff4fd7969851028f713e29">iOS</label>
+<input type="radio" id="64853ad248d641cfad0ad27e8cfa73e3-aef1a5d5c0a146c7845649405d84fe48" name="64853ad248d641cfad0ad27e8cfa73e3" class="tab"><label for="64853ad248d641cfad0ad27e8cfa73e3-aef1a5d5c0a146c7845649405d84fe48">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
