--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3fb47b14f948468ba77486cc35b7abff-3c040703b6b04b2a93fd36829922d8b5" name="3fb47b14f948468ba77486cc35b7abff" class="tab" checked><label for="3fb47b14f948468ba77486cc35b7abff-3c040703b6b04b2a93fd36829922d8b5" >General</label>
-<input type="radio" id="3fb47b14f948468ba77486cc35b7abff-eb9490f88efc48d29ade37b8c4359363" name="3fb47b14f948468ba77486cc35b7abff" class="tab" ><label for="3fb47b14f948468ba77486cc35b7abff-eb9490f88efc48d29ade37b8c4359363" >Startup</label>
-<input type="radio" id="3fb47b14f948468ba77486cc35b7abff-646dd3e777f648ad94976c44f9777ff5" name="3fb47b14f948468ba77486cc35b7abff" class="tab" ><label for="3fb47b14f948468ba77486cc35b7abff-646dd3e777f648ad94976c44f9777ff5" >Android</label>
-<input type="radio" id="3fb47b14f948468ba77486cc35b7abff-883025b9ccea4b97b445688f72272f93" name="3fb47b14f948468ba77486cc35b7abff" class="tab" ><label for="3fb47b14f948468ba77486cc35b7abff-883025b9ccea4b97b445688f72272f93" >iOS</label>
-<input type="radio" id="3fb47b14f948468ba77486cc35b7abff-8a5b3f2a225b45369eb4ce3f640a6e46" name="3fb47b14f948468ba77486cc35b7abff" class="tab" ><label for="3fb47b14f948468ba77486cc35b7abff-8a5b3f2a225b45369eb4ce3f640a6e46" >Windows</label>
+<input type="radio" id="62f6dfb19e1d419bb6a5ddb9f20ed5e4-d1b28da740e94c4ea15988a8bd55af08" name="62f6dfb19e1d419bb6a5ddb9f20ed5e4" class="tab" checked><label for="62f6dfb19e1d419bb6a5ddb9f20ed5e4-d1b28da740e94c4ea15988a8bd55af08" >General</label>
+<input type="radio" id="62f6dfb19e1d419bb6a5ddb9f20ed5e4-b9202dc6e240408fba09d50149cb41ad" name="62f6dfb19e1d419bb6a5ddb9f20ed5e4" class="tab" ><label for="62f6dfb19e1d419bb6a5ddb9f20ed5e4-b9202dc6e240408fba09d50149cb41ad" >Startup</label>
+<input type="radio" id="62f6dfb19e1d419bb6a5ddb9f20ed5e4-7759874cccf5482397747b8bce84d5a2" name="62f6dfb19e1d419bb6a5ddb9f20ed5e4" class="tab" ><label for="62f6dfb19e1d419bb6a5ddb9f20ed5e4-7759874cccf5482397747b8bce84d5a2" >Android</label>
+<input type="radio" id="62f6dfb19e1d419bb6a5ddb9f20ed5e4-dac7afcfc48946c3832a9216af3c8664" name="62f6dfb19e1d419bb6a5ddb9f20ed5e4" class="tab" ><label for="62f6dfb19e1d419bb6a5ddb9f20ed5e4-dac7afcfc48946c3832a9216af3c8664" >iOS</label>
+<input type="radio" id="62f6dfb19e1d419bb6a5ddb9f20ed5e4-5d2cae01fc64495da454f504267748bb" name="62f6dfb19e1d419bb6a5ddb9f20ed5e4" class="tab" ><label for="62f6dfb19e1d419bb6a5ddb9f20ed5e4-5d2cae01fc64495da454f504267748bb" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
