--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -366,7 +366,7 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -381,10 +381,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="ec104b8efa5643ed96fb89dcb110fd28-c26ba885ca5c40cc8e37e447ae94e60c" name="ec104b8efa5643ed96fb89dcb110fd28" class="tab" checked><label for="ec104b8efa5643ed96fb89dcb110fd28-c26ba885ca5c40cc8e37e447ae94e60c" >General</label>
-<input type="radio" id="ec104b8efa5643ed96fb89dcb110fd28-139db84f04a84be3987c7032c60df6d2" name="ec104b8efa5643ed96fb89dcb110fd28" class="tab" ><label for="ec104b8efa5643ed96fb89dcb110fd28-139db84f04a84be3987c7032c60df6d2" >Startup</label>
-<input type="radio" id="ec104b8efa5643ed96fb89dcb110fd28-6e8f24dcd99744558bd0f9241a456a6f" name="ec104b8efa5643ed96fb89dcb110fd28" class="tab" ><label for="ec104b8efa5643ed96fb89dcb110fd28-6e8f24dcd99744558bd0f9241a456a6f" >Android</label>
-<input type="radio" id="ec104b8efa5643ed96fb89dcb110fd28-3c2e676b97304ae8a23de9d2bc59335d" name="ec104b8efa5643ed96fb89dcb110fd28" class="tab" ><label for="ec104b8efa5643ed96fb89dcb110fd28-3c2e676b97304ae8a23de9d2bc59335d" >iOS</label>
+<input type="radio" id="98f98eb83eb1414682eb2779627c81dd-2b02ff03e12849159a77d6cdb44158f6" name="98f98eb83eb1414682eb2779627c81dd" class="tab" checked><label for="98f98eb83eb1414682eb2779627c81dd-2b02ff03e12849159a77d6cdb44158f6" >General</label>
+<input type="radio" id="98f98eb83eb1414682eb2779627c81dd-ed1771b566e14140b230d07fcda00d45" name="98f98eb83eb1414682eb2779627c81dd" class="tab" ><label for="98f98eb83eb1414682eb2779627c81dd-ed1771b566e14140b230d07fcda00d45" >Startup</label>
+<input type="radio" id="98f98eb83eb1414682eb2779627c81dd-83e10730bf544048b83c38ae549ec062" name="98f98eb83eb1414682eb2779627c81dd" class="tab" ><label for="98f98eb83eb1414682eb2779627c81dd-83e10730bf544048b83c38ae549ec062" >Android</label>
+<input type="radio" id="98f98eb83eb1414682eb2779627c81dd-2612b2cc69bd44e1a6889594eb41d164" name="98f98eb83eb1414682eb2779627c81dd" class="tab" ><label for="98f98eb83eb1414682eb2779627c81dd-2612b2cc69bd44e1a6889594eb41d164" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
