--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -364,7 +364,7 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -373,11 +373,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="fefde19a41864125ab7a2ee36c6958ce-7fb781332f7c4188b23afed116535001" name="fefde19a41864125ab7a2ee36c6958ce" class="tab" checked=""><label for="fefde19a41864125ab7a2ee36c6958ce-7fb781332f7c4188b23afed116535001">General</label>
-<input type="radio" id="fefde19a41864125ab7a2ee36c6958ce-c729e4ccbcd5443186f1df6ed4bc43ca" name="fefde19a41864125ab7a2ee36c6958ce" class="tab"><label for="fefde19a41864125ab7a2ee36c6958ce-c729e4ccbcd5443186f1df6ed4bc43ca">Startup</label>
-<input type="radio" id="fefde19a41864125ab7a2ee36c6958ce-8f267ba4ee4b4d9299cd55167c5444e1" name="fefde19a41864125ab7a2ee36c6958ce" class="tab"><label for="fefde19a41864125ab7a2ee36c6958ce-8f267ba4ee4b4d9299cd55167c5444e1">Android</label>
-<input type="radio" id="fefde19a41864125ab7a2ee36c6958ce-cf0e036b346244769b0c8a3675cca015" name="fefde19a41864125ab7a2ee36c6958ce" class="tab"><label for="fefde19a41864125ab7a2ee36c6958ce-cf0e036b346244769b0c8a3675cca015">iOS</label>
-<input type="radio" id="fefde19a41864125ab7a2ee36c6958ce-42bfe6d7fc1f4afeac817403afc7ccc5" name="fefde19a41864125ab7a2ee36c6958ce" class="tab"><label for="fefde19a41864125ab7a2ee36c6958ce-42bfe6d7fc1f4afeac817403afc7ccc5">Windows</label>
+<input type="radio" id="991ca2a866fc4d919b7aa66dd9162329-bbc410837e0247d1ac467b49e1a82a2c" name="991ca2a866fc4d919b7aa66dd9162329" class="tab" checked=""><label for="991ca2a866fc4d919b7aa66dd9162329-bbc410837e0247d1ac467b49e1a82a2c">General</label>
+<input type="radio" id="991ca2a866fc4d919b7aa66dd9162329-1a848ff8de3e41cf979b573f1cae2a78" name="991ca2a866fc4d919b7aa66dd9162329" class="tab"><label for="991ca2a866fc4d919b7aa66dd9162329-1a848ff8de3e41cf979b573f1cae2a78">Startup</label>
+<input type="radio" id="991ca2a866fc4d919b7aa66dd9162329-ac44344be40141e99ffac6b2832b6c08" name="991ca2a866fc4d919b7aa66dd9162329" class="tab"><label for="991ca2a866fc4d919b7aa66dd9162329-ac44344be40141e99ffac6b2832b6c08">Android</label>
+<input type="radio" id="991ca2a866fc4d919b7aa66dd9162329-29d150b2879744afb6bdea2e943663c3" name="991ca2a866fc4d919b7aa66dd9162329" class="tab"><label for="991ca2a866fc4d919b7aa66dd9162329-29d150b2879744afb6bdea2e943663c3">iOS</label>
+<input type="radio" id="991ca2a866fc4d919b7aa66dd9162329-503e0b1257894ed8880ed9cf76a86831" name="991ca2a866fc4d919b7aa66dd9162329" class="tab"><label for="991ca2a866fc4d919b7aa66dd9162329-503e0b1257894ed8880ed9cf76a86831">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
