--- a/push/azure.html
+++ b/push/azure.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="4f9c9acb47ba4e2fadb3476791a4cfd3-291044a3e40e41759c8a5c37de4b35cf" name="4f9c9acb47ba4e2fadb3476791a4cfd3" class="tab" checked><label for="4f9c9acb47ba4e2fadb3476791a4cfd3-291044a3e40e41759c8a5c37de4b35cf" >General</label>
-<input type="radio" id="4f9c9acb47ba4e2fadb3476791a4cfd3-4f2573a3cae54bcbb8813e9d0d5c5555" name="4f9c9acb47ba4e2fadb3476791a4cfd3" class="tab" ><label for="4f9c9acb47ba4e2fadb3476791a4cfd3-4f2573a3cae54bcbb8813e9d0d5c5555" >Startup</label>
-<input type="radio" id="4f9c9acb47ba4e2fadb3476791a4cfd3-fcf278a4bd954697816179f3c0b5181c" name="4f9c9acb47ba4e2fadb3476791a4cfd3" class="tab" ><label for="4f9c9acb47ba4e2fadb3476791a4cfd3-fcf278a4bd954697816179f3c0b5181c" >Android</label>
-<input type="radio" id="4f9c9acb47ba4e2fadb3476791a4cfd3-1fb62995fa714dcdaf5841dc0a17336c" name="4f9c9acb47ba4e2fadb3476791a4cfd3" class="tab" ><label for="4f9c9acb47ba4e2fadb3476791a4cfd3-1fb62995fa714dcdaf5841dc0a17336c" >iOS</label>
-<input type="radio" id="4f9c9acb47ba4e2fadb3476791a4cfd3-2c34ef019cd74bf7bfbf439cec96ac76" name="4f9c9acb47ba4e2fadb3476791a4cfd3" class="tab" ><label for="4f9c9acb47ba4e2fadb3476791a4cfd3-2c34ef019cd74bf7bfbf439cec96ac76" >Windows</label>
+<input type="radio" id="8c64fc29dbfc4a72a676371977cd6855-2421ed26cc6a4f8c92223d10af16d58e" name="8c64fc29dbfc4a72a676371977cd6855" class="tab" checked><label for="8c64fc29dbfc4a72a676371977cd6855-2421ed26cc6a4f8c92223d10af16d58e" >General</label>
+<input type="radio" id="8c64fc29dbfc4a72a676371977cd6855-255555cc35204c448c0c22a436c9ebf0" name="8c64fc29dbfc4a72a676371977cd6855" class="tab" ><label for="8c64fc29dbfc4a72a676371977cd6855-255555cc35204c448c0c22a436c9ebf0" >Startup</label>
+<input type="radio" id="8c64fc29dbfc4a72a676371977cd6855-a7685c2000594cfbac37f6808fe83b1d" name="8c64fc29dbfc4a72a676371977cd6855" class="tab" ><label for="8c64fc29dbfc4a72a676371977cd6855-a7685c2000594cfbac37f6808fe83b1d" >Android</label>
+<input type="radio" id="8c64fc29dbfc4a72a676371977cd6855-147b4a46524d48fcb6712711f69fb222" name="8c64fc29dbfc4a72a676371977cd6855" class="tab" ><label for="8c64fc29dbfc4a72a676371977cd6855-147b4a46524d48fcb6712711f69fb222" >iOS</label>
+<input type="radio" id="8c64fc29dbfc4a72a676371977cd6855-2e09f4f57c084f578c6393da2b7e3421" name="8c64fc29dbfc4a72a676371977cd6855" class="tab" ><label for="8c64fc29dbfc4a72a676371977cd6855-2e09f4f57c084f578c6393da2b7e3421" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
