--- a/push/firebase.html
+++ b/push/firebase.html
@@ -364,16 +364,16 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="6a6bd276c38a4a46beac3ede4ec6dfa8-7c9935153e9a45c6a5a9d2e88090c2f0" name="6a6bd276c38a4a46beac3ede4ec6dfa8" class="tab" checked=""><label for="6a6bd276c38a4a46beac3ede4ec6dfa8-7c9935153e9a45c6a5a9d2e88090c2f0">General</label>
-<input type="radio" id="6a6bd276c38a4a46beac3ede4ec6dfa8-0bbf6cb2ffbb42e6883979563b28306e" name="6a6bd276c38a4a46beac3ede4ec6dfa8" class="tab"><label for="6a6bd276c38a4a46beac3ede4ec6dfa8-0bbf6cb2ffbb42e6883979563b28306e">Startup</label>
-<input type="radio" id="6a6bd276c38a4a46beac3ede4ec6dfa8-fc3f5adbb569492c8f2222ec9a67c87b" name="6a6bd276c38a4a46beac3ede4ec6dfa8" class="tab"><label for="6a6bd276c38a4a46beac3ede4ec6dfa8-fc3f5adbb569492c8f2222ec9a67c87b">Android</label>
-<input type="radio" id="6a6bd276c38a4a46beac3ede4ec6dfa8-06bee6fd591f4e1cbd9281241ff588a8" name="6a6bd276c38a4a46beac3ede4ec6dfa8" class="tab"><label for="6a6bd276c38a4a46beac3ede4ec6dfa8-06bee6fd591f4e1cbd9281241ff588a8">iOS</label>
+<input type="radio" id="b78c9480c84c42d3a897367b740b3efd-ab1b98af70b44e318adeb7ef1dc820b9" name="b78c9480c84c42d3a897367b740b3efd" class="tab" checked=""><label for="b78c9480c84c42d3a897367b740b3efd-ab1b98af70b44e318adeb7ef1dc820b9">General</label>
+<input type="radio" id="b78c9480c84c42d3a897367b740b3efd-4e94504277274fada18e408b8f695160" name="b78c9480c84c42d3a897367b740b3efd" class="tab"><label for="b78c9480c84c42d3a897367b740b3efd-4e94504277274fada18e408b8f695160">Startup</label>
+<input type="radio" id="b78c9480c84c42d3a897367b740b3efd-67cc1fbee50446b9bdf56d49267a2de4" name="b78c9480c84c42d3a897367b740b3efd" class="tab"><label for="b78c9480c84c42d3a897367b740b3efd-67cc1fbee50446b9bdf56d49267a2de4">Android</label>
+<input type="radio" id="b78c9480c84c42d3a897367b740b3efd-6bcd8fbd0bab4921836a809b3a873f46" name="b78c9480c84c42d3a897367b740b3efd" class="tab"><label for="b78c9480c84c42d3a897367b740b3efd-6bcd8fbd0bab4921836a809b3a873f46">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
