--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -366,16 +366,16 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="ec0759fbdbc148b2a0765421304d176e-a8d27e63f764410bbe5d5a6b23d72043" name="ec0759fbdbc148b2a0765421304d176e" class="tab" checked><label for="ec0759fbdbc148b2a0765421304d176e-a8d27e63f764410bbe5d5a6b23d72043" >General</label>
-<input type="radio" id="ec0759fbdbc148b2a0765421304d176e-9ef64c88711d407c9d1452af5f04964a" name="ec0759fbdbc148b2a0765421304d176e" class="tab" ><label for="ec0759fbdbc148b2a0765421304d176e-9ef64c88711d407c9d1452af5f04964a" >Startup</label>
-<input type="radio" id="ec0759fbdbc148b2a0765421304d176e-8e4233f5e37b45e9aa2d068ac967a96b" name="ec0759fbdbc148b2a0765421304d176e" class="tab" ><label for="ec0759fbdbc148b2a0765421304d176e-8e4233f5e37b45e9aa2d068ac967a96b" >Android</label>
-<input type="radio" id="ec0759fbdbc148b2a0765421304d176e-bbff6cb6a6934f938804c658b93f0626" name="ec0759fbdbc148b2a0765421304d176e" class="tab" ><label for="ec0759fbdbc148b2a0765421304d176e-bbff6cb6a6934f938804c658b93f0626" >iOS</label>
+<input type="radio" id="ec4c053682894fc9ab526707aff20935-4bb4a1215d1f413fabd77d2280397999" name="ec4c053682894fc9ab526707aff20935" class="tab" checked><label for="ec4c053682894fc9ab526707aff20935-4bb4a1215d1f413fabd77d2280397999" >General</label>
+<input type="radio" id="ec4c053682894fc9ab526707aff20935-f76a06c2e80b46e6a00531b47acf48a2" name="ec4c053682894fc9ab526707aff20935" class="tab" ><label for="ec4c053682894fc9ab526707aff20935-f76a06c2e80b46e6a00531b47acf48a2" >Startup</label>
+<input type="radio" id="ec4c053682894fc9ab526707aff20935-12d13e1119f44c5cb040e378e3e189ad" name="ec4c053682894fc9ab526707aff20935" class="tab" ><label for="ec4c053682894fc9ab526707aff20935-12d13e1119f44c5cb040e378e3e189ad" >Android</label>
+<input type="radio" id="ec4c053682894fc9ab526707aff20935-ccee83fde4e047ccb6dcd60bad8517cc" name="ec4c053682894fc9ab526707aff20935" class="tab" ><label for="ec4c053682894fc9ab526707aff20935-ccee83fde4e047ccb6dcd60bad8517cc" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
