--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b30dae8af9314572bd29f38b8a8e568a-a906d249d07543b48184a8252981448a" name="b30dae8af9314572bd29f38b8a8e568a" class="tab" checked><label for="b30dae8af9314572bd29f38b8a8e568a-a906d249d07543b48184a8252981448a" >General</label>
-<input type="radio" id="b30dae8af9314572bd29f38b8a8e568a-8f93b9741b40411e80af1f6a4eced60d" name="b30dae8af9314572bd29f38b8a8e568a" class="tab" ><label for="b30dae8af9314572bd29f38b8a8e568a-8f93b9741b40411e80af1f6a4eced60d" >Startup</label>
-<input type="radio" id="b30dae8af9314572bd29f38b8a8e568a-58f8d11429214846b0437da68e7b4deb" name="b30dae8af9314572bd29f38b8a8e568a" class="tab" ><label for="b30dae8af9314572bd29f38b8a8e568a-58f8d11429214846b0437da68e7b4deb" >Android</label>
-<input type="radio" id="b30dae8af9314572bd29f38b8a8e568a-3a8b213478a2440e91db3d0216d325cd" name="b30dae8af9314572bd29f38b8a8e568a" class="tab" ><label for="b30dae8af9314572bd29f38b8a8e568a-3a8b213478a2440e91db3d0216d325cd" >iOS</label>
-<input type="radio" id="b30dae8af9314572bd29f38b8a8e568a-791593e655564dbda0c827eba233bf63" name="b30dae8af9314572bd29f38b8a8e568a" class="tab" ><label for="b30dae8af9314572bd29f38b8a8e568a-791593e655564dbda0c827eba233bf63" >Windows</label>
+<input type="radio" id="354918f6e76646f29aa618c328f11e6b-81927d6789994516920ed174e023534b" name="354918f6e76646f29aa618c328f11e6b" class="tab" checked><label for="354918f6e76646f29aa618c328f11e6b-81927d6789994516920ed174e023534b" >General</label>
+<input type="radio" id="354918f6e76646f29aa618c328f11e6b-02d3aecf20514ec1b8659f56acdba837" name="354918f6e76646f29aa618c328f11e6b" class="tab" ><label for="354918f6e76646f29aa618c328f11e6b-02d3aecf20514ec1b8659f56acdba837" >Startup</label>
+<input type="radio" id="354918f6e76646f29aa618c328f11e6b-83e5e33b8b7a4ac1b31eb9c1e8106f3d" name="354918f6e76646f29aa618c328f11e6b" class="tab" ><label for="354918f6e76646f29aa618c328f11e6b-83e5e33b8b7a4ac1b31eb9c1e8106f3d" >Android</label>
+<input type="radio" id="354918f6e76646f29aa618c328f11e6b-3aa6e9bb31494467b4c96adb36f6b7ba" name="354918f6e76646f29aa618c328f11e6b" class="tab" ><label for="354918f6e76646f29aa618c328f11e6b-3aa6e9bb31494467b4c96adb36f6b7ba" >iOS</label>
+<input type="radio" id="354918f6e76646f29aa618c328f11e6b-820043114f7b4fe792dfdbbc1ebd1021" name="354918f6e76646f29aa618c328f11e6b" class="tab" ><label for="354918f6e76646f29aa618c328f11e6b-820043114f7b4fe792dfdbbc1ebd1021" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
