--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -366,16 +366,16 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="438a8bc2664c4b1a97eb17c646dbf58a-1eb93d76fcf041d2b512b130ec571f29" name="438a8bc2664c4b1a97eb17c646dbf58a" class="tab" checked><label for="438a8bc2664c4b1a97eb17c646dbf58a-1eb93d76fcf041d2b512b130ec571f29" >General</label>
-<input type="radio" id="438a8bc2664c4b1a97eb17c646dbf58a-048fd32a5e6f4d698dbd0d524427cc68" name="438a8bc2664c4b1a97eb17c646dbf58a" class="tab" ><label for="438a8bc2664c4b1a97eb17c646dbf58a-048fd32a5e6f4d698dbd0d524427cc68" >Startup</label>
-<input type="radio" id="438a8bc2664c4b1a97eb17c646dbf58a-9016918fd1a64af4947ea1c73a338651" name="438a8bc2664c4b1a97eb17c646dbf58a" class="tab" ><label for="438a8bc2664c4b1a97eb17c646dbf58a-9016918fd1a64af4947ea1c73a338651" >Android</label>
-<input type="radio" id="438a8bc2664c4b1a97eb17c646dbf58a-cefc775113fc42fa8a19b6fc823052a3" name="438a8bc2664c4b1a97eb17c646dbf58a" class="tab" ><label for="438a8bc2664c4b1a97eb17c646dbf58a-cefc775113fc42fa8a19b6fc823052a3" >Windows</label>
+<input type="radio" id="00fc0d3a02d84507be4d29c679dd9cab-a87cb8efee154e69933645369b62fdca" name="00fc0d3a02d84507be4d29c679dd9cab" class="tab" checked><label for="00fc0d3a02d84507be4d29c679dd9cab-a87cb8efee154e69933645369b62fdca" >General</label>
+<input type="radio" id="00fc0d3a02d84507be4d29c679dd9cab-a2d84baa39c54fadbcf7cd6c8ceaf003" name="00fc0d3a02d84507be4d29c679dd9cab" class="tab" ><label for="00fc0d3a02d84507be4d29c679dd9cab-a2d84baa39c54fadbcf7cd6c8ceaf003" >Startup</label>
+<input type="radio" id="00fc0d3a02d84507be4d29c679dd9cab-a714c034668f43a59b737a0871342df6" name="00fc0d3a02d84507be4d29c679dd9cab" class="tab" ><label for="00fc0d3a02d84507be4d29c679dd9cab-a714c034668f43a59b737a0871342df6" >Android</label>
+<input type="radio" id="00fc0d3a02d84507be4d29c679dd9cab-e18483c35f0343839b7ad630cb95b385" name="00fc0d3a02d84507be4d29c679dd9cab" class="tab" ><label for="00fc0d3a02d84507be4d29c679dd9cab-e18483c35f0343839b7ad630cb95b385" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
