--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="2f6e9ad0d36c441d8477a2cbdf265fd9-303fa8383d3b481388536e530a74187f" name="2f6e9ad0d36c441d8477a2cbdf265fd9" class="tab" checked><label for="2f6e9ad0d36c441d8477a2cbdf265fd9-303fa8383d3b481388536e530a74187f" >General</label>
-<input type="radio" id="2f6e9ad0d36c441d8477a2cbdf265fd9-1162531230f24899a24b6e7170df6aaf" name="2f6e9ad0d36c441d8477a2cbdf265fd9" class="tab" ><label for="2f6e9ad0d36c441d8477a2cbdf265fd9-1162531230f24899a24b6e7170df6aaf" >Startup</label>
-<input type="radio" id="2f6e9ad0d36c441d8477a2cbdf265fd9-eca66c0279fb486085c202bbdf915639" name="2f6e9ad0d36c441d8477a2cbdf265fd9" class="tab" ><label for="2f6e9ad0d36c441d8477a2cbdf265fd9-eca66c0279fb486085c202bbdf915639" >Android</label>
-<input type="radio" id="2f6e9ad0d36c441d8477a2cbdf265fd9-00a34907c04c42af9893c61bbdbbd5c2" name="2f6e9ad0d36c441d8477a2cbdf265fd9" class="tab" ><label for="2f6e9ad0d36c441d8477a2cbdf265fd9-00a34907c04c42af9893c61bbdbbd5c2" >iOS</label>
-<input type="radio" id="2f6e9ad0d36c441d8477a2cbdf265fd9-c324e3611d654b22b6b4762f43e8abc9" name="2f6e9ad0d36c441d8477a2cbdf265fd9" class="tab" ><label for="2f6e9ad0d36c441d8477a2cbdf265fd9-c324e3611d654b22b6b4762f43e8abc9" >Windows</label>
+<input type="radio" id="620be3e49a0145b485d49c9399c22d0b-4c488175c55043a6abef6e2297748f15" name="620be3e49a0145b485d49c9399c22d0b" class="tab" checked><label for="620be3e49a0145b485d49c9399c22d0b-4c488175c55043a6abef6e2297748f15" >General</label>
+<input type="radio" id="620be3e49a0145b485d49c9399c22d0b-4c28029712f5432e8618de0f5d56a17a" name="620be3e49a0145b485d49c9399c22d0b" class="tab" ><label for="620be3e49a0145b485d49c9399c22d0b-4c28029712f5432e8618de0f5d56a17a" >Startup</label>
+<input type="radio" id="620be3e49a0145b485d49c9399c22d0b-86d8802c4d934ad4b1dbd7e1c959ad51" name="620be3e49a0145b485d49c9399c22d0b" class="tab" ><label for="620be3e49a0145b485d49c9399c22d0b-86d8802c4d934ad4b1dbd7e1c959ad51" >Android</label>
+<input type="radio" id="620be3e49a0145b485d49c9399c22d0b-62a63cd6a39c430686aecc672495149e" name="620be3e49a0145b485d49c9399c22d0b" class="tab" ><label for="620be3e49a0145b485d49c9399c22d0b-62a63cd6a39c430686aecc672495149e" >iOS</label>
+<input type="radio" id="620be3e49a0145b485d49c9399c22d0b-4e256db620714f01805a36ac77a6c8a1" name="620be3e49a0145b485d49c9399c22d0b" class="tab" ><label for="620be3e49a0145b485d49c9399c22d0b-4e256db620714f01805a36ac77a6c8a1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
