--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7bc3a3d2a7644b74bc278d6eac91d247-23aca9ee06bf43ed904c031bfd01fa8e" name="7bc3a3d2a7644b74bc278d6eac91d247" class="tab" checked><label for="7bc3a3d2a7644b74bc278d6eac91d247-23aca9ee06bf43ed904c031bfd01fa8e" >General</label>
-<input type="radio" id="7bc3a3d2a7644b74bc278d6eac91d247-e0b3d911bc3e45559306529d9c322544" name="7bc3a3d2a7644b74bc278d6eac91d247" class="tab" ><label for="7bc3a3d2a7644b74bc278d6eac91d247-e0b3d911bc3e45559306529d9c322544" >Startup</label>
-<input type="radio" id="7bc3a3d2a7644b74bc278d6eac91d247-321e7bb45dfd41f584ca898ff772aa4c" name="7bc3a3d2a7644b74bc278d6eac91d247" class="tab" ><label for="7bc3a3d2a7644b74bc278d6eac91d247-321e7bb45dfd41f584ca898ff772aa4c" >Android</label>
-<input type="radio" id="7bc3a3d2a7644b74bc278d6eac91d247-fe62ccec76d945af91f53d9cc48dbcb5" name="7bc3a3d2a7644b74bc278d6eac91d247" class="tab" ><label for="7bc3a3d2a7644b74bc278d6eac91d247-fe62ccec76d945af91f53d9cc48dbcb5" >iOS</label>
-<input type="radio" id="7bc3a3d2a7644b74bc278d6eac91d247-4d14a16eeb87409aba13306976a2d570" name="7bc3a3d2a7644b74bc278d6eac91d247" class="tab" ><label for="7bc3a3d2a7644b74bc278d6eac91d247-4d14a16eeb87409aba13306976a2d570" >Windows</label>
+<input type="radio" id="7a22e8a63aec4099b7621c77f86383bd-62f4e68685014021be44975d7a6e4ab0" name="7a22e8a63aec4099b7621c77f86383bd" class="tab" checked><label for="7a22e8a63aec4099b7621c77f86383bd-62f4e68685014021be44975d7a6e4ab0" >General</label>
+<input type="radio" id="7a22e8a63aec4099b7621c77f86383bd-79edc42329704378b18165344194ad38" name="7a22e8a63aec4099b7621c77f86383bd" class="tab" ><label for="7a22e8a63aec4099b7621c77f86383bd-79edc42329704378b18165344194ad38" >Startup</label>
+<input type="radio" id="7a22e8a63aec4099b7621c77f86383bd-55bcd32137924de0bfab46615bf9e10e" name="7a22e8a63aec4099b7621c77f86383bd" class="tab" ><label for="7a22e8a63aec4099b7621c77f86383bd-55bcd32137924de0bfab46615bf9e10e" >Android</label>
+<input type="radio" id="7a22e8a63aec4099b7621c77f86383bd-6eba5c5fb4394cbea8de15922b2281b8" name="7a22e8a63aec4099b7621c77f86383bd" class="tab" ><label for="7a22e8a63aec4099b7621c77f86383bd-6eba5c5fb4394cbea8de15922b2281b8" >iOS</label>
+<input type="radio" id="7a22e8a63aec4099b7621c77f86383bd-9bb0c9d3909f40b98f7be24f34a88414" name="7a22e8a63aec4099b7621c77f86383bd" class="tab" ><label for="7a22e8a63aec4099b7621c77f86383bd-9bb0c9d3909f40b98f7be24f34a88414" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
