--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="76bc495046554aaba71cd395a41b1d62-a40e4fab91da4cf0b1e348b7b7a9af1e" name="76bc495046554aaba71cd395a41b1d62" class="tab" checked><label for="76bc495046554aaba71cd395a41b1d62-a40e4fab91da4cf0b1e348b7b7a9af1e" >General</label>
-<input type="radio" id="76bc495046554aaba71cd395a41b1d62-84e1730d065c4bdb8bb0629157838dca" name="76bc495046554aaba71cd395a41b1d62" class="tab" ><label for="76bc495046554aaba71cd395a41b1d62-84e1730d065c4bdb8bb0629157838dca" >Startup</label>
-<input type="radio" id="76bc495046554aaba71cd395a41b1d62-89e787a21a674b43b27a182bba4b6010" name="76bc495046554aaba71cd395a41b1d62" class="tab" ><label for="76bc495046554aaba71cd395a41b1d62-89e787a21a674b43b27a182bba4b6010" >Android</label>
-<input type="radio" id="76bc495046554aaba71cd395a41b1d62-e5ddb6492b8b49e783cef5c40b3e331e" name="76bc495046554aaba71cd395a41b1d62" class="tab" ><label for="76bc495046554aaba71cd395a41b1d62-e5ddb6492b8b49e783cef5c40b3e331e" >iOS</label>
-<input type="radio" id="76bc495046554aaba71cd395a41b1d62-0a498b8e413e4a57977664e4c9dc636b" name="76bc495046554aaba71cd395a41b1d62" class="tab" ><label for="76bc495046554aaba71cd395a41b1d62-0a498b8e413e4a57977664e4c9dc636b" >Windows</label>
+<input type="radio" id="b0bf10667a6740b3a722817a455a5538-4b3a030476d64b058c53e2c39d336f8b" name="b0bf10667a6740b3a722817a455a5538" class="tab" checked><label for="b0bf10667a6740b3a722817a455a5538-4b3a030476d64b058c53e2c39d336f8b" >General</label>
+<input type="radio" id="b0bf10667a6740b3a722817a455a5538-268ba7695e5942efae1c434fff7794dc" name="b0bf10667a6740b3a722817a455a5538" class="tab" ><label for="b0bf10667a6740b3a722817a455a5538-268ba7695e5942efae1c434fff7794dc" >Startup</label>
+<input type="radio" id="b0bf10667a6740b3a722817a455a5538-afc67151e00e4b39bb5a8be2286673d9" name="b0bf10667a6740b3a722817a455a5538" class="tab" ><label for="b0bf10667a6740b3a722817a455a5538-afc67151e00e4b39bb5a8be2286673d9" >Android</label>
+<input type="radio" id="b0bf10667a6740b3a722817a455a5538-d7f72b82410a41cc8cbf749a3f30b4f7" name="b0bf10667a6740b3a722817a455a5538" class="tab" ><label for="b0bf10667a6740b3a722817a455a5538-d7f72b82410a41cc8cbf749a3f30b4f7" >iOS</label>
+<input type="radio" id="b0bf10667a6740b3a722817a455a5538-7c794638c3d3492ab2621e4b5a124169" name="b0bf10667a6740b3a722817a455a5538" class="tab" ><label for="b0bf10667a6740b3a722817a455a5538-7c794638c3d3492ab2621e4b5a124169" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
