--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -366,15 +366,15 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a037ee9a610340f8b9fa44ac25f845b3-3176978714214568b7cb41accc77ae67" name="a037ee9a610340f8b9fa44ac25f845b3" class="tab" checked><label for="a037ee9a610340f8b9fa44ac25f845b3-3176978714214568b7cb41accc77ae67" >General</label>
-<input type="radio" id="a037ee9a610340f8b9fa44ac25f845b3-5b42cc360e784b74aa95165690eb5e78" name="a037ee9a610340f8b9fa44ac25f845b3" class="tab" ><label for="a037ee9a610340f8b9fa44ac25f845b3-5b42cc360e784b74aa95165690eb5e78" >Startup</label>
-<input type="radio" id="a037ee9a610340f8b9fa44ac25f845b3-f88b7ac76e744699873a0e749339089b" name="a037ee9a610340f8b9fa44ac25f845b3" class="tab" ><label for="a037ee9a610340f8b9fa44ac25f845b3-f88b7ac76e744699873a0e749339089b" >Android</label>
+<input type="radio" id="a488dc939b984c7a95cd3bafecfa1df9-b8eb7761968f443fb6f53ff282e9897e" name="a488dc939b984c7a95cd3bafecfa1df9" class="tab" checked><label for="a488dc939b984c7a95cd3bafecfa1df9-b8eb7761968f443fb6f53ff282e9897e" >General</label>
+<input type="radio" id="a488dc939b984c7a95cd3bafecfa1df9-f9b34cf4640c48dc931687e7c6876845" name="a488dc939b984c7a95cd3bafecfa1df9" class="tab" ><label for="a488dc939b984c7a95cd3bafecfa1df9-f9b34cf4640c48dc931687e7c6876845" >Startup</label>
+<input type="radio" id="a488dc939b984c7a95cd3bafecfa1df9-351f5d70d9ec46aea6701e69439e422e" name="a488dc939b984c7a95cd3bafecfa1df9" class="tab" ><label for="a488dc939b984c7a95cd3bafecfa1df9-351f5d70d9ec46aea6701e69439e422e" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
