--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0f2ef039102244ec9e2f916090fdcfa8-dcb4d38626b34edcb69ce6256ba17c0e" name="0f2ef039102244ec9e2f916090fdcfa8" class="tab" checked><label for="0f2ef039102244ec9e2f916090fdcfa8-dcb4d38626b34edcb69ce6256ba17c0e" >General</label>
-<input type="radio" id="0f2ef039102244ec9e2f916090fdcfa8-9ff8b88a34cd4edaa1c2250b0b880ea9" name="0f2ef039102244ec9e2f916090fdcfa8" class="tab" ><label for="0f2ef039102244ec9e2f916090fdcfa8-9ff8b88a34cd4edaa1c2250b0b880ea9" >Startup</label>
-<input type="radio" id="0f2ef039102244ec9e2f916090fdcfa8-a956f84ba7d846e9b4675e62722041f8" name="0f2ef039102244ec9e2f916090fdcfa8" class="tab" ><label for="0f2ef039102244ec9e2f916090fdcfa8-a956f84ba7d846e9b4675e62722041f8" >Android</label>
-<input type="radio" id="0f2ef039102244ec9e2f916090fdcfa8-51fdbf24a7cd44ebba9f55068f6e05d8" name="0f2ef039102244ec9e2f916090fdcfa8" class="tab" ><label for="0f2ef039102244ec9e2f916090fdcfa8-51fdbf24a7cd44ebba9f55068f6e05d8" >iOS</label>
-<input type="radio" id="0f2ef039102244ec9e2f916090fdcfa8-062387f6a61f47da902dd6a0167fdcde" name="0f2ef039102244ec9e2f916090fdcfa8" class="tab" ><label for="0f2ef039102244ec9e2f916090fdcfa8-062387f6a61f47da902dd6a0167fdcde" >Windows</label>
+<input type="radio" id="e5f1424e4766485ba6e092dc5e30a7e0-bf275827e261476ea7cce4213100aebd" name="e5f1424e4766485ba6e092dc5e30a7e0" class="tab" checked><label for="e5f1424e4766485ba6e092dc5e30a7e0-bf275827e261476ea7cce4213100aebd" >General</label>
+<input type="radio" id="e5f1424e4766485ba6e092dc5e30a7e0-a32a13da558c4ee39e7f883eeebbf8d1" name="e5f1424e4766485ba6e092dc5e30a7e0" class="tab" ><label for="e5f1424e4766485ba6e092dc5e30a7e0-a32a13da558c4ee39e7f883eeebbf8d1" >Startup</label>
+<input type="radio" id="e5f1424e4766485ba6e092dc5e30a7e0-79a317d25a4d421b97aa9adebceb3f56" name="e5f1424e4766485ba6e092dc5e30a7e0" class="tab" ><label for="e5f1424e4766485ba6e092dc5e30a7e0-79a317d25a4d421b97aa9adebceb3f56" >Android</label>
+<input type="radio" id="e5f1424e4766485ba6e092dc5e30a7e0-c2f733636c884b49837f078986655f2b" name="e5f1424e4766485ba6e092dc5e30a7e0" class="tab" ><label for="e5f1424e4766485ba6e092dc5e30a7e0-c2f733636c884b49837f078986655f2b" >iOS</label>
+<input type="radio" id="e5f1424e4766485ba6e092dc5e30a7e0-ada744bafa0946fc9f659753ab3b81af" name="e5f1424e4766485ba6e092dc5e30a7e0" class="tab" ><label for="e5f1424e4766485ba6e092dc5e30a7e0-ada744bafa0946fc9f659753ab3b81af" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
