--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="83e514955c114f9983151c8847d70814-fb054f9859de4f249171077ceb888716" name="83e514955c114f9983151c8847d70814" class="tab" checked><label for="83e514955c114f9983151c8847d70814-fb054f9859de4f249171077ceb888716" >General</label>
-<input type="radio" id="83e514955c114f9983151c8847d70814-a3ff28f0c5384e1ea911173f61330071" name="83e514955c114f9983151c8847d70814" class="tab" ><label for="83e514955c114f9983151c8847d70814-a3ff28f0c5384e1ea911173f61330071" >Startup</label>
-<input type="radio" id="83e514955c114f9983151c8847d70814-71be6f94a8584e7e9556e7dd1dd78d99" name="83e514955c114f9983151c8847d70814" class="tab" ><label for="83e514955c114f9983151c8847d70814-71be6f94a8584e7e9556e7dd1dd78d99" >Android</label>
-<input type="radio" id="83e514955c114f9983151c8847d70814-bb4b15c0d33546e7bf2266b0d0274db6" name="83e514955c114f9983151c8847d70814" class="tab" ><label for="83e514955c114f9983151c8847d70814-bb4b15c0d33546e7bf2266b0d0274db6" >iOS</label>
-<input type="radio" id="83e514955c114f9983151c8847d70814-02cc945990a2488da249240a581a1ea6" name="83e514955c114f9983151c8847d70814" class="tab" ><label for="83e514955c114f9983151c8847d70814-02cc945990a2488da249240a581a1ea6" >Windows</label>
+<input type="radio" id="18d207b504e642f8b0ad947f06b8a8a0-49b0cb33a2d149b2acc4c7f71a829321" name="18d207b504e642f8b0ad947f06b8a8a0" class="tab" checked><label for="18d207b504e642f8b0ad947f06b8a8a0-49b0cb33a2d149b2acc4c7f71a829321" >General</label>
+<input type="radio" id="18d207b504e642f8b0ad947f06b8a8a0-73faddcafed949beba237d6769eec77d" name="18d207b504e642f8b0ad947f06b8a8a0" class="tab" ><label for="18d207b504e642f8b0ad947f06b8a8a0-73faddcafed949beba237d6769eec77d" >Startup</label>
+<input type="radio" id="18d207b504e642f8b0ad947f06b8a8a0-c87c37f3c9d14ac8ab3a14723872eca2" name="18d207b504e642f8b0ad947f06b8a8a0" class="tab" ><label for="18d207b504e642f8b0ad947f06b8a8a0-c87c37f3c9d14ac8ab3a14723872eca2" >Android</label>
+<input type="radio" id="18d207b504e642f8b0ad947f06b8a8a0-e997524e5eba4385b7f3a05f867c764d" name="18d207b504e642f8b0ad947f06b8a8a0" class="tab" ><label for="18d207b504e642f8b0ad947f06b8a8a0-e997524e5eba4385b7f3a05f867c764d" >iOS</label>
+<input type="radio" id="18d207b504e642f8b0ad947f06b8a8a0-14f890f5a86345d295cc5c4f948b015e" name="18d207b504e642f8b0ad947f06b8a8a0" class="tab" ><label for="18d207b504e642f8b0ad947f06b8a8a0-14f890f5a86345d295cc5c4f948b015e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
