--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -366,16 +366,16 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d5f1882c293648b1b17de24bdf27117a-9418f2453b0146c79d384be30907ba3b" name="d5f1882c293648b1b17de24bdf27117a" class="tab" checked><label for="d5f1882c293648b1b17de24bdf27117a-9418f2453b0146c79d384be30907ba3b" >General</label>
-<input type="radio" id="d5f1882c293648b1b17de24bdf27117a-c0bc0c98f7934455827c4eab7f43c923" name="d5f1882c293648b1b17de24bdf27117a" class="tab" ><label for="d5f1882c293648b1b17de24bdf27117a-c0bc0c98f7934455827c4eab7f43c923" >Startup</label>
-<input type="radio" id="d5f1882c293648b1b17de24bdf27117a-62a5a85877d345df9dba030b9301e19d" name="d5f1882c293648b1b17de24bdf27117a" class="tab" ><label for="d5f1882c293648b1b17de24bdf27117a-62a5a85877d345df9dba030b9301e19d" >Android</label>
-<input type="radio" id="d5f1882c293648b1b17de24bdf27117a-156388a0510149d7aaea68a4be995ec1" name="d5f1882c293648b1b17de24bdf27117a" class="tab" ><label for="d5f1882c293648b1b17de24bdf27117a-156388a0510149d7aaea68a4be995ec1" >iOS</label>
+<input type="radio" id="09d42ef8cf6c4eebbcf3b929d50305bb-812b0e8080ff43668e1247e6593b60d4" name="09d42ef8cf6c4eebbcf3b929d50305bb" class="tab" checked><label for="09d42ef8cf6c4eebbcf3b929d50305bb-812b0e8080ff43668e1247e6593b60d4" >General</label>
+<input type="radio" id="09d42ef8cf6c4eebbcf3b929d50305bb-e933e010c7f64d12a073af75da2d33c6" name="09d42ef8cf6c4eebbcf3b929d50305bb" class="tab" ><label for="09d42ef8cf6c4eebbcf3b929d50305bb-e933e010c7f64d12a073af75da2d33c6" >Startup</label>
+<input type="radio" id="09d42ef8cf6c4eebbcf3b929d50305bb-78e14cda9fc346e8b48f86b5015617df" name="09d42ef8cf6c4eebbcf3b929d50305bb" class="tab" ><label for="09d42ef8cf6c4eebbcf3b929d50305bb-78e14cda9fc346e8b48f86b5015617df" >Android</label>
+<input type="radio" id="09d42ef8cf6c4eebbcf3b929d50305bb-d01d64c6b9724ce5aee80fdbbb67d6fa" name="09d42ef8cf6c4eebbcf3b929d50305bb" class="tab" ><label for="09d42ef8cf6c4eebbcf3b929d50305bb-d01d64c6b9724ce5aee80fdbbb67d6fa" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
