--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -366,15 +366,15 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="47ac734ba2924f0193297c14c2570a02-7e1aac62943d4633aa2d71ddbf46d636" name="47ac734ba2924f0193297c14c2570a02" class="tab" checked><label for="47ac734ba2924f0193297c14c2570a02-7e1aac62943d4633aa2d71ddbf46d636" >General</label>
-<input type="radio" id="47ac734ba2924f0193297c14c2570a02-3c0f94a014094ad0abfdf602b1ccd171" name="47ac734ba2924f0193297c14c2570a02" class="tab" ><label for="47ac734ba2924f0193297c14c2570a02-3c0f94a014094ad0abfdf602b1ccd171" >Startup</label>
-<input type="radio" id="47ac734ba2924f0193297c14c2570a02-5aa85c5d4e5241bbbd5cd4f1bb9a9f14" name="47ac734ba2924f0193297c14c2570a02" class="tab" ><label for="47ac734ba2924f0193297c14c2570a02-5aa85c5d4e5241bbbd5cd4f1bb9a9f14" >Android</label>
+<input type="radio" id="6f8efec8b01e4225b41fcb784dfb1490-8a4c748bfd714b91b0314975a5cfb169" name="6f8efec8b01e4225b41fcb784dfb1490" class="tab" checked><label for="6f8efec8b01e4225b41fcb784dfb1490-8a4c748bfd714b91b0314975a5cfb169" >General</label>
+<input type="radio" id="6f8efec8b01e4225b41fcb784dfb1490-5257a539f0cd4f838f3b824f381fb84c" name="6f8efec8b01e4225b41fcb784dfb1490" class="tab" ><label for="6f8efec8b01e4225b41fcb784dfb1490-5257a539f0cd4f838f3b824f381fb84c" >Startup</label>
+<input type="radio" id="6f8efec8b01e4225b41fcb784dfb1490-a232427b6259469892b492cc5e75d6e4" name="6f8efec8b01e4225b41fcb784dfb1490" class="tab" ><label for="6f8efec8b01e4225b41fcb784dfb1490-a232427b6259469892b492cc5e75d6e4" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
