--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -366,7 +366,7 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -378,11 +378,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="ff2199c77a9d4918b947689b2aa2dcb6-68677e91caca480e97f4f6d94a7f7aad" name="ff2199c77a9d4918b947689b2aa2dcb6" class="tab" checked><label for="ff2199c77a9d4918b947689b2aa2dcb6-68677e91caca480e97f4f6d94a7f7aad" >General</label>
-<input type="radio" id="ff2199c77a9d4918b947689b2aa2dcb6-500c986293da49f094a47cf4b6ba512e" name="ff2199c77a9d4918b947689b2aa2dcb6" class="tab" ><label for="ff2199c77a9d4918b947689b2aa2dcb6-500c986293da49f094a47cf4b6ba512e" >Startup</label>
-<input type="radio" id="ff2199c77a9d4918b947689b2aa2dcb6-2f24be41e4e24f1ca90f033c14ccab37" name="ff2199c77a9d4918b947689b2aa2dcb6" class="tab" ><label for="ff2199c77a9d4918b947689b2aa2dcb6-2f24be41e4e24f1ca90f033c14ccab37" >Android</label>
-<input type="radio" id="ff2199c77a9d4918b947689b2aa2dcb6-fdf091af440a4966a7a869da6792eeb4" name="ff2199c77a9d4918b947689b2aa2dcb6" class="tab" ><label for="ff2199c77a9d4918b947689b2aa2dcb6-fdf091af440a4966a7a869da6792eeb4" >iOS</label>
-<input type="radio" id="ff2199c77a9d4918b947689b2aa2dcb6-4150198d747e40fb93193faa0946765c" name="ff2199c77a9d4918b947689b2aa2dcb6" class="tab" ><label for="ff2199c77a9d4918b947689b2aa2dcb6-4150198d747e40fb93193faa0946765c" >Windows</label></li>
+<input type="radio" id="8c1179ffd7534b2c94f002c7b2236668-3d43197ce5534100b9035fd979e99e7c" name="8c1179ffd7534b2c94f002c7b2236668" class="tab" checked><label for="8c1179ffd7534b2c94f002c7b2236668-3d43197ce5534100b9035fd979e99e7c" >General</label>
+<input type="radio" id="8c1179ffd7534b2c94f002c7b2236668-16ea2fa6bd5540b282e2351023c2b5f5" name="8c1179ffd7534b2c94f002c7b2236668" class="tab" ><label for="8c1179ffd7534b2c94f002c7b2236668-16ea2fa6bd5540b282e2351023c2b5f5" >Startup</label>
+<input type="radio" id="8c1179ffd7534b2c94f002c7b2236668-3f7f6aec3873431cbf6211af83b3ef12" name="8c1179ffd7534b2c94f002c7b2236668" class="tab" ><label for="8c1179ffd7534b2c94f002c7b2236668-3f7f6aec3873431cbf6211af83b3ef12" >Android</label>
+<input type="radio" id="8c1179ffd7534b2c94f002c7b2236668-9987c36ac3ad4c22a90df340169a6c08" name="8c1179ffd7534b2c94f002c7b2236668" class="tab" ><label for="8c1179ffd7534b2c94f002c7b2236668-9987c36ac3ad4c22a90df340169a6c08" >iOS</label>
+<input type="radio" id="8c1179ffd7534b2c94f002c7b2236668-c55745d68c8340ed9a5ceb2dc8ff8b9e" name="8c1179ffd7534b2c94f002c7b2236668" class="tab" ><label for="8c1179ffd7534b2c94f002c7b2236668-c55745d68c8340ed9a5ceb2dc8ff8b9e" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
