--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="d6acebbc961f414685f193d34cf8b91e-833581584597401f899a50a498f83437" name="d6acebbc961f414685f193d34cf8b91e" class="tab" checked><label for="d6acebbc961f414685f193d34cf8b91e-833581584597401f899a50a498f83437" >General</label>
-<input type="radio" id="d6acebbc961f414685f193d34cf8b91e-103146d703bd4494ac757fafeec96f99" name="d6acebbc961f414685f193d34cf8b91e" class="tab" ><label for="d6acebbc961f414685f193d34cf8b91e-103146d703bd4494ac757fafeec96f99" >Startup</label>
-<input type="radio" id="d6acebbc961f414685f193d34cf8b91e-7f7a386a436143f8ba139a26fb2a7bdf" name="d6acebbc961f414685f193d34cf8b91e" class="tab" ><label for="d6acebbc961f414685f193d34cf8b91e-7f7a386a436143f8ba139a26fb2a7bdf" >Android</label>
-<input type="radio" id="d6acebbc961f414685f193d34cf8b91e-b875d793518346c282054e63dbe47f9f" name="d6acebbc961f414685f193d34cf8b91e" class="tab" ><label for="d6acebbc961f414685f193d34cf8b91e-b875d793518346c282054e63dbe47f9f" >iOS</label>
+<input type="radio" id="bfe3483be9d74ea7a07d85e9a65cdef2-2d9add3a1f514940999191b0bce8bee1" name="bfe3483be9d74ea7a07d85e9a65cdef2" class="tab" checked><label for="bfe3483be9d74ea7a07d85e9a65cdef2-2d9add3a1f514940999191b0bce8bee1" >General</label>
+<input type="radio" id="bfe3483be9d74ea7a07d85e9a65cdef2-b761c657cf7f45ab96c1d3939be57637" name="bfe3483be9d74ea7a07d85e9a65cdef2" class="tab" ><label for="bfe3483be9d74ea7a07d85e9a65cdef2-b761c657cf7f45ab96c1d3939be57637" >Startup</label>
+<input type="radio" id="bfe3483be9d74ea7a07d85e9a65cdef2-4772696f0c7b4cf4932a5f85ef2022e5" name="bfe3483be9d74ea7a07d85e9a65cdef2" class="tab" ><label for="bfe3483be9d74ea7a07d85e9a65cdef2-4772696f0c7b4cf4932a5f85ef2022e5" >Android</label>
+<input type="radio" id="bfe3483be9d74ea7a07d85e9a65cdef2-c46dd5e3aad64f65ad06893b77645d4e" name="bfe3483be9d74ea7a07d85e9a65cdef2" class="tab" ><label for="bfe3483be9d74ea7a07d85e9a65cdef2-c46dd5e3aad64f65ad06893b77645d4e" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
