--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -364,18 +364,18 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="68051c67cdfe479a832061ad0b30beee-804c66b581304178af9b6fc233c4c0f0" name="68051c67cdfe479a832061ad0b30beee" class="tab" checked=""><label for="68051c67cdfe479a832061ad0b30beee-804c66b581304178af9b6fc233c4c0f0">General</label>
-<input type="radio" id="68051c67cdfe479a832061ad0b30beee-75168d55ac1646a3a97714a33f0c9136" name="68051c67cdfe479a832061ad0b30beee" class="tab"><label for="68051c67cdfe479a832061ad0b30beee-75168d55ac1646a3a97714a33f0c9136">Startup</label>
-<input type="radio" id="68051c67cdfe479a832061ad0b30beee-9de38b8d0ebc4fab93e16a41a5e9ec8a" name="68051c67cdfe479a832061ad0b30beee" class="tab"><label for="68051c67cdfe479a832061ad0b30beee-9de38b8d0ebc4fab93e16a41a5e9ec8a">Android</label>
-<input type="radio" id="68051c67cdfe479a832061ad0b30beee-7039b19fd3f649f792c2b07a3d392c01" name="68051c67cdfe479a832061ad0b30beee" class="tab"><label for="68051c67cdfe479a832061ad0b30beee-7039b19fd3f649f792c2b07a3d392c01">iOS</label>
-<input type="radio" id="68051c67cdfe479a832061ad0b30beee-2795e94ddb3a4b15bd4d3ef926e440f9" name="68051c67cdfe479a832061ad0b30beee" class="tab"><label for="68051c67cdfe479a832061ad0b30beee-2795e94ddb3a4b15bd4d3ef926e440f9">Windows</label>
+<input type="radio" id="3118e191835e4c7ca9fa4a705b926d37-2fcc7aa327da4b6d861ada0602194bc8" name="3118e191835e4c7ca9fa4a705b926d37" class="tab" checked=""><label for="3118e191835e4c7ca9fa4a705b926d37-2fcc7aa327da4b6d861ada0602194bc8">General</label>
+<input type="radio" id="3118e191835e4c7ca9fa4a705b926d37-d4f0c9f2699441059f64f304f8589c34" name="3118e191835e4c7ca9fa4a705b926d37" class="tab"><label for="3118e191835e4c7ca9fa4a705b926d37-d4f0c9f2699441059f64f304f8589c34">Startup</label>
+<input type="radio" id="3118e191835e4c7ca9fa4a705b926d37-fc63abe43ae648bb8fa951ba31d08693" name="3118e191835e4c7ca9fa4a705b926d37" class="tab"><label for="3118e191835e4c7ca9fa4a705b926d37-fc63abe43ae648bb8fa951ba31d08693">Android</label>
+<input type="radio" id="3118e191835e4c7ca9fa4a705b926d37-0ed00233a75e456b81b18adc98f6cc02" name="3118e191835e4c7ca9fa4a705b926d37" class="tab"><label for="3118e191835e4c7ca9fa4a705b926d37-0ed00233a75e456b81b18adc98f6cc02">iOS</label>
+<input type="radio" id="3118e191835e4c7ca9fa4a705b926d37-d200cfffca344bc3a301a02202a993d4" name="3118e191835e4c7ca9fa4a705b926d37" class="tab"><label for="3118e191835e4c7ca9fa4a705b926d37-d200cfffca344bc3a301a02202a993d4">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
