--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -366,17 +366,17 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3c39b53291ac4da49a72a042a20b884b-edd6ee6ddfdf45158796302a3919b776" name="3c39b53291ac4da49a72a042a20b884b" class="tab" checked><label for="3c39b53291ac4da49a72a042a20b884b-edd6ee6ddfdf45158796302a3919b776" >General</label>
-<input type="radio" id="3c39b53291ac4da49a72a042a20b884b-41beaa6e72b74a76ab40dbb2d1ebf483" name="3c39b53291ac4da49a72a042a20b884b" class="tab" ><label for="3c39b53291ac4da49a72a042a20b884b-41beaa6e72b74a76ab40dbb2d1ebf483" >Startup</label>
-<input type="radio" id="3c39b53291ac4da49a72a042a20b884b-f0f31014d6054c59971a06bfbde71158" name="3c39b53291ac4da49a72a042a20b884b" class="tab" ><label for="3c39b53291ac4da49a72a042a20b884b-f0f31014d6054c59971a06bfbde71158" >Android</label>
-<input type="radio" id="3c39b53291ac4da49a72a042a20b884b-a424c4b6bec943a1837a6c177aadf546" name="3c39b53291ac4da49a72a042a20b884b" class="tab" ><label for="3c39b53291ac4da49a72a042a20b884b-a424c4b6bec943a1837a6c177aadf546" >iOS</label>
-<input type="radio" id="3c39b53291ac4da49a72a042a20b884b-89893c77a19a468a935430c202639b3d" name="3c39b53291ac4da49a72a042a20b884b" class="tab" ><label for="3c39b53291ac4da49a72a042a20b884b-89893c77a19a468a935430c202639b3d" >Windows</label>
+<input type="radio" id="e100a11583ab4bccb0a0e9817ef1c69f-0c17e1497c724f868fe173cc05b55069" name="e100a11583ab4bccb0a0e9817ef1c69f" class="tab" checked><label for="e100a11583ab4bccb0a0e9817ef1c69f-0c17e1497c724f868fe173cc05b55069" >General</label>
+<input type="radio" id="e100a11583ab4bccb0a0e9817ef1c69f-12f792eab19e42c39612abdf331e2eaf" name="e100a11583ab4bccb0a0e9817ef1c69f" class="tab" ><label for="e100a11583ab4bccb0a0e9817ef1c69f-12f792eab19e42c39612abdf331e2eaf" >Startup</label>
+<input type="radio" id="e100a11583ab4bccb0a0e9817ef1c69f-d9701eda85bc4d18811a9f449cb6417f" name="e100a11583ab4bccb0a0e9817ef1c69f" class="tab" ><label for="e100a11583ab4bccb0a0e9817ef1c69f-d9701eda85bc4d18811a9f449cb6417f" >Android</label>
+<input type="radio" id="e100a11583ab4bccb0a0e9817ef1c69f-86c872a344464322a7cfa2c2c04f8adc" name="e100a11583ab4bccb0a0e9817ef1c69f" class="tab" ><label for="e100a11583ab4bccb0a0e9817ef1c69f-86c872a344464322a7cfa2c2c04f8adc" >iOS</label>
+<input type="radio" id="e100a11583ab4bccb0a0e9817ef1c69f-2b0c7c0ed54542e980f2259608885259" name="e100a11583ab4bccb0a0e9817ef1c69f" class="tab" ><label for="e100a11583ab4bccb0a0e9817ef1c69f-2b0c7c0ed54542e980f2259608885259" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
