--- a/locations/gps.html
+++ b/locations/gps.html
@@ -366,18 +366,18 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="c26c4c8dd4ca49cbb59900c38855be63-44e3848b75dd4423a1f4bc78f40f0204" name="c26c4c8dd4ca49cbb59900c38855be63" class="tab" checked><label for="c26c4c8dd4ca49cbb59900c38855be63-44e3848b75dd4423a1f4bc78f40f0204" >General</label>
-<input type="radio" id="c26c4c8dd4ca49cbb59900c38855be63-c83fd9c6971f42d794d62d427511c34e" name="c26c4c8dd4ca49cbb59900c38855be63" class="tab" ><label for="c26c4c8dd4ca49cbb59900c38855be63-c83fd9c6971f42d794d62d427511c34e" >Startup</label>
-<input type="radio" id="c26c4c8dd4ca49cbb59900c38855be63-4a373f90fe82406ca31b51e019320959" name="c26c4c8dd4ca49cbb59900c38855be63" class="tab" ><label for="c26c4c8dd4ca49cbb59900c38855be63-4a373f90fe82406ca31b51e019320959" >Android</label>
-<input type="radio" id="c26c4c8dd4ca49cbb59900c38855be63-e9d5c0aa8a2f469185a56f46e6879012" name="c26c4c8dd4ca49cbb59900c38855be63" class="tab" ><label for="c26c4c8dd4ca49cbb59900c38855be63-e9d5c0aa8a2f469185a56f46e6879012" >iOS</label>
-<input type="radio" id="c26c4c8dd4ca49cbb59900c38855be63-501e54d2fbea4588973e46d2ae09a0f0" name="c26c4c8dd4ca49cbb59900c38855be63" class="tab" ><label for="c26c4c8dd4ca49cbb59900c38855be63-501e54d2fbea4588973e46d2ae09a0f0" >Windows</label>
+<input type="radio" id="5d5f9a9cb0f7492dbcbfbef1ec1652fc-6cad9220572d485ab00cb00434be638a" name="5d5f9a9cb0f7492dbcbfbef1ec1652fc" class="tab" checked><label for="5d5f9a9cb0f7492dbcbfbef1ec1652fc-6cad9220572d485ab00cb00434be638a" >General</label>
+<input type="radio" id="5d5f9a9cb0f7492dbcbfbef1ec1652fc-ac106f064f314f9687217055926c6729" name="5d5f9a9cb0f7492dbcbfbef1ec1652fc" class="tab" ><label for="5d5f9a9cb0f7492dbcbfbef1ec1652fc-ac106f064f314f9687217055926c6729" >Startup</label>
+<input type="radio" id="5d5f9a9cb0f7492dbcbfbef1ec1652fc-7dce94b7aff443ccbd1d402d7b606870" name="5d5f9a9cb0f7492dbcbfbef1ec1652fc" class="tab" ><label for="5d5f9a9cb0f7492dbcbfbef1ec1652fc-7dce94b7aff443ccbd1d402d7b606870" >Android</label>
+<input type="radio" id="5d5f9a9cb0f7492dbcbfbef1ec1652fc-f7777f1b4e144b8cbabe87b96414fa6c" name="5d5f9a9cb0f7492dbcbfbef1ec1652fc" class="tab" ><label for="5d5f9a9cb0f7492dbcbfbef1ec1652fc-f7777f1b4e144b8cbabe87b96414fa6c" >iOS</label>
+<input type="radio" id="5d5f9a9cb0f7492dbcbfbef1ec1652fc-7b45b2198304441baae66c6a2d6f3dc2" name="5d5f9a9cb0f7492dbcbfbef1ec1652fc" class="tab" ><label for="5d5f9a9cb0f7492dbcbfbef1ec1652fc-7b45b2198304441baae66c6a2d6f3dc2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
