--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -366,7 +366,7 @@
                                                             <a href="/release-notes/v241">v2.4.1</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/nextrelease">Next Release</a>
+                                                            <a href="/release-notes/nextrelease">Next Release (2.5.0)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -386,7 +386,7 @@
         <li><a href="/release-notes/v230">v2.3.0</a></li>
         <li><a href="/release-notes/v240">v2.4.0</a></li>
         <li><a href="/release-notes/v241">v2.4.1</a></li>
-        <li><a href="/release-notes/nextrelease">Next Release</a></li>
+        <li><a href="/release-notes/nextrelease">Next Release (2.5.0)</a></li>
 </ul>
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
